--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "express": "^4.18.2",
     "leaflet": "^1.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
