--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "16.17.0",
+    "npm": "8.19.1"
   }
 }
