--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_AUTH0_DOMAIN=dev-3w1bagtd.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=J6nMaFhZ1CTfvlD0o73lDgOhB5FmRqcf
 REACT_APP_AUTH0_CALLBACK_URL=https://hvz-fe-noroff.herokuapp.com/callback
-REACT_APP_API_SERVER_URL=https://hvz-fe-noroff.herokuapp.com/
+REACT_APP_API_SERVER_URL=https://hvz-api-noroff.herokuapp.com/
 REACT_APP_AUTH0_AUDIENCE=https://hvz-server.com
