--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "leaflet": "^1.9.2",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,8 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -29,7 +32,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -47,9 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
+  },
   "engines": {
     "node": "16.17.0",
     "npm": "8.19.1"
-}
+  }
 }
